# artifacts-conext25-ipv6-scanner

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
data/interim/: aggregated_full_period_all_telescopes_as.pkl  aggregated_full_period_all_telescopes_packets.pkl  aggregated_full_period_all_telescopes_sess128.pkl  aggregated_full_period_all_telescopes_sess64.pkl  aggregated_full_period_all_telescopes_src128.pkl  aggregated_full_period_all_telescopes_src64.pkl  heavy-hitter-per-day-bubbles_cached.pkl  new_prefixes_s2_cached.pkl  overview-prefixes-squared_T1.pkl  overview-prefixes-squared_T2.pkl  overview-prefixes-squared_T3.pkl  overview-prefixes-squared_T4.pkl  sessions-telescopes-12week_cached.pkl  sources_sessions_all_telescopes_2weeks_cached.pkl  upsetplot_telescopes_AS-Number.pkl  upsetplot_telescopes_scan_source_128.pkl
data/processed/: NIST_intermittent_iid_df.parquet  NIST_intermittent_subnet_df.parquet  NIST_oneoff_iid_df.parquet  NIST_oneoff_subnet_df.parquet  NIST_periodic_iid_df.parquet  NIST_periodic_subnet_df.parquet  prefix-announcements.csv  sips4rdns-t1234.csv.out  (+1 more)
docs/: mkdocs.yml
docs/docs/: index.md
ipv6_scanner/: __init__.py  classify_scanner.py  config.py  dataset.py  filter.py  helper.py  plots-new.py  plots.py  post_processing_01.py  spoki-filter.py  telescope-data-processing-lightweight.py
notebooks/: Figure_12a_structured.txt  Figure_12b_random.txt  Figure_13_order_of_address.txt  extracting-ips-for-addr6.ipynb  fixing-telescope-data.ipynb  overlap.ipynb  tables-new.ipynb  tables.ipynb
tools/: rdns-script.sh  run.sh
