[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ipv6_scanner"
version = "0.0.1"
description = "Artifacts for CoNEXT'25 paper #162 A Detailed Measurement View on IPv6 Scanners and Their Adaption to BGP Signals"
authors = [
  { name = "TU Dresden and HAW Hamburg" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["ipv6_scanner"]
force_sort_within_sections = true
